--- a/css.css
+++ b/css.css
@@ -6,6 +6,7 @@
     margin-bottom: 10px;
     margin: auto;
     text-align: center;
+    border-radius: 25px;
     margin-bottom: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -28,6 +29,7 @@ body {
 }
 
 .spawnzone {
+    border-radius: 25px;
     height: 75px;
     background: blue;
     margin-bottom: 10px;
@@ -39,6 +41,7 @@ body {
 }
 
 .one {
+    border-radius: 25px;
     width: 50%;
     font-size: 40px;
     text-align: center;
@@ -53,6 +56,7 @@ body {
 
 .two {
     width: 50%;
+    border-radius: 25px;
     font-family: Arial, Helvetica, sans-serif;
     height: 125px;
     margin: auto;
@@ -67,6 +71,7 @@ body {
 }
 
 .three {
+    border-radius: 25px;
     width: 50%;
     font-family: Arial, Helvetica, sans-serif;
     height: 125px;
@@ -84,6 +89,7 @@ body {
     background: black;
     width: 50%;
     padding: 10px;
+    border-radius: 25px;
     height: 50px;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
